Added accounts modal

--- a/views/index.jade
+++ b/views/index.jade
@@ -204,7 +204,7 @@ html
                       div Active Accounts!
                 a(href='#').js-active-accounts
                   .panel-footer
-                    span.pull-left View Details
+                    a(href='#' data-toggle="modal" data-target="#show-accounts-modal").pull-left View Details
                     span.pull-right
                       i.fa.fa-arrow-circle-right
                     .clearfix
