--- a/views/index.jade
+++ b/views/index.jade
@@ -174,6 +174,12 @@ html
         .container-fluid
           // Page Heading
           .row
+            // Flash Messages
+            if success && success.length > 0
+              .alert.alert-success.alert-dismissible.fade-in(role="alert")
+                button.close(type="button" data-dismiss="alert" aria-label="Close")
+                  span(aria-hidden="true") ×
+                p= success
             .col-lg-12
               h1.page-header
                 | Dashboard 
@@ -370,7 +376,7 @@ html
                           td $943.45
                   .text-right
                     a(href='#')
-                      | View All Transactions #{allAccounts} 
+                      | View All Transactions
                       i.fa.fa-arrow-circle-right
           // /.row
         // /.container-fluid
