--- a/views/index.jade
+++ b/views/index.jade
@@ -194,7 +194,7 @@ html
               ol.breadcrumb
                 li.active
                   i.fa.fa-dashboard
-                  |  fa-dashboard
+                  |  dashboard
           // /.row
           .row
             .col-lg-3.col-md-6
@@ -407,7 +407,7 @@ html
               th ID
               th Username
               th Email
-              th Completed Trades
+              th Completed Trades / Cycle
           tbody.js-accounts
 
       .modal-footer
