--- a/views/index.html
+++ b/views/index.html
@@ -42,6 +42,14 @@
               <label>Access Token Secret</label>
               <input placeholder="Enter the account Access Token Secret" name="access_token_secret" type="text" required="required" class="form-control"/>
             </div>
+            <div class="form-group">
+              <label>Impression Type</label>
+              <select name='type' class='form-control'>
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+              </select>
+            </div>
             <input value='10' name='price' hidden>
           </div>
       </div>
