Created landing page and user page

--- a/views/signin.html
+++ b/views/signin.html
@@ -46,7 +46,7 @@
 
             <div class="panel-body" >
 
-                <form id="form" class="form-horizontal" method="POST">
+                <form id="form" class="form-horizontal" method="POST" action="/admin/signin">
                    
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -85,7 +85,7 @@
 
             <div class="panel-body" >
 
-                <form id="form" class="form-horizontal" method="POST">
+                <form id="form" class="form-horizontal" method="POST" action="/user/signin">
                    
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
