Created user dynamic profiles for users

--- a/views/index.jade
+++ b/views/index.jade
@@ -46,7 +46,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') Twitter Bot Admin V1.0
+          a.navbar-brand(href='/dashboard') Twitter Bot Admin V1.0
         // Top Menu Items
         ul.nav.navbar-right.top-nav
           li.dropdown
@@ -131,7 +131,7 @@ html
               b.caret
             ul.dropdown-menu
               li
-                a(href='#')
+                a(href='/me')
                   i.fa.fa-fw.fa-user
                   |  Profile
               li
