--- a/views/charts.jade
+++ b/views/charts.jade
@@ -34,7 +34,7 @@ html(lang='en')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') Twitter Bot Admin V1.0
+          a.navbar-brand(href='/dashboard') Twitter Bot Admin V1.0
         // Top Menu Items
         ul.nav.navbar-right.top-nav
           li.dropdown
@@ -119,7 +119,7 @@ html(lang='en')
               b.caret
             ul.dropdown-menu
               li
-                a(href='#')
+                a(href='/me')
                   i.fa.fa-fw.fa-user
                   |  Profile
               li
