Place holder for signin

--- a/views/land.jade
+++ b/views/land.jade
@@ -34,6 +34,13 @@ html
 
 	body
 		
+		br
+		br
+		h5.text-center(style='color: white;') Already Have An Account?
+		h5.text-center
+			a(href='/signin' style='color: white;') Sign In
+
+		
 
 
 	// Bootstrap Core JavaScript
